--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,16 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
+    ports:
+      - 5432:5432
+    networks:
+      - app_network
+
+  adminer:
+    image: dockette/adminer:full-php5
+    restart: always
+    ports:
+      - 6543:8080
     networks:
       - app_network
 
