--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,6 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
-    ports:
-      - 5432:5432
     networks:
       - app_network
 
@@ -23,21 +21,21 @@ services:
     networks:
       - app_network
 
-#  go_application:
-#    build: "."
-#    depends_on:
-#      - "postgres"
-#    networks:
-#      - app_network
-#
-#  nginx:
-#    build: "./.nginx"
-#    container_name: rguide_backend
-#    depends_on:
-#      - "go_application"
-#    networks:
-#      - app_network
-#      - server
+  go_application:
+    build: "."
+    depends_on:
+      - "postgres"
+    networks:
+      - app_network
+
+  nginx:
+    build: "./.nginx"
+    container_name: rguide_backend
+    depends_on:
+      - "go_application"
+    networks:
+      - app_network
+      - server
 
 volumes:
   postgres-data:
