--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
 
   postgres:
+    restart: always
     image: postgres:9.5-alpine
     volumes:
       - "postgres-data:/var/lib/postgresql/data"
@@ -14,14 +15,15 @@ services:
       - app_network
 
   adminer:
-    image: adminer
     restart: always
+    image: adminer
     ports:
       - 6543:8080
     networks:
       - app_network
 
   go_application:
+    restart: always
     build: "."
     depends_on:
       - "postgres"
@@ -32,6 +34,7 @@ services:
       - app_network
 
   nginx:
+    restart: always
     build: "./.nginx"
     container_name: rguide_backend
     depends_on:
