--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -6,6 +6,7 @@ server {
   listen 80;
 
   location / {
+    client_max_body_size 0;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host            $http_host;
     proxy_pass http://go_application;
