--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: "3.8"
 
 services:
 
-  postgres:
+  rguide_postgres:
     restart: unless-stopped
     image: postgres:9.5-alpine
+    container_name: rguide_postgres
     volumes:
       - "postgres-data:/var/lib/postgresql/data"
     environment:
@@ -28,7 +29,7 @@ services:
     restart: unless-stopped
     build: "."
     depends_on:
-      - "postgres"
+      - rguide_postgres
     expose:
       - 8010
     volumes:
@@ -39,10 +40,10 @@ services:
 
   nginx:
     restart: unless-stopped
-    build: "./.nginx"
+    build: .nginx
     container_name: rguide_backend
     depends_on:
-      - "go_application"
+      - go_application
     expose:
       - 80
     networks:
